src/test/ui/span/issue-40157.nll.stderr
error[E0597]: `foo` does not live long enough
  --> $DIR/issue-40157.rs:12:53
   |
LL |     {println!("{:?}", match { let foo = vec![1, 2]; foo.get(1) } { x => x });}
   |                       ------------------------------^^^--------------------
   |                       |                             |          |
   |                       |                             |          borrowed value only lives until here
   |                       |                             borrowed value does not live long enough
   |                       borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
